--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
@@ -7,7 +7,7 @@
     <title>Rentify</title>
   </head>
   <body>
-    <div id="root" class="bg-gray-200"></div>
+    <div id="root" class="bg-gray-300"></div>
     <script type="module" src="/src/main.jsx"></script>
   </body>
 </html>
